<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/my_fon1"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|right"
        android:layout_weight="1.6"
        tools:ignore="RtlHardcoded">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:ignore="UselessParent">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_answer"
                    android:lines="1"
                    android:textSize="60sp"
                    android:textColor="@color/white"
                    android:text="@string/_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </HorizontalScrollView>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="DisableBaselineAlignment,NestedWeights">

            <LinearLayout
                android:id="@+id/btn_clear"
                android:layout_margin="3dp"
                android:gravity="center"
                android:background="@color/my_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="InefficientWeight">

                <TextView
                    android:text="@string/ce"
                    style="@style/tv_style" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_open"
                style="@style/linear_style">

                <TextView
                    android:text="@string/q1"
                    style="@style/tv_style"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_close"
                style="@style/linear_style">

                <TextView
                    android:text="@string/q2"
                    style="@style/tv_style"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_remove"
                style="@style/linear_style">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_remove"
                    android:padding="30dp"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:id="@+id/btn_7"
                style="@style/tv_style_1">

                <TextView
                    android:text="@string/_7"
                    style="@style/tv_style" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_8"
                style="@style/tv_style_1">

                <TextView
                    android:text="@string/_8"
                    style="@style/tv_style"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_9"
                style="@style/tv_style_1">

                <TextView
                    android:text="@string/_9"
                    style="@style/tv_style"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_slash"
                style="@style/linear_style">

                <TextView
                    android:text="@string/bolish"
                    style="@style/tv_style"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:id="@+id/btn_4"
                style="@style/tv_style_1">

                <TextView
                    android:text="@string/_4"
                    style="@style/tv_style" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_5"
                style="@style/tv_style_1">

                <TextView
                    android:text="@string/_5"
                    style="@style/tv_style"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_6"
                style="@style/tv_style_1">

                <TextView
                    android:text="@string/_6"
                    style="@style/tv_style"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_x"
                style="@style/linear_style">

                <TextView
                    android:text="@string/kop"
                    style="@style/tv_style"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:id="@+id/btn_1"
                style="@style/tv_style_1">

                <TextView
                    android:text="@string/_1"
                    style="@style/tv_style" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_2"
                style="@style/tv_style_1">

                <TextView
                    android:text="@string/_2"
                    style="@style/tv_style"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_3"
                style="@style/tv_style_1">

                <TextView
                    android:text="@string/_3"
                    style="@style/tv_style"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_minus"
                style="@style/linear_style">

                <TextView
                    android:text="@string/minus"
                    style="@style/tv_style"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:id="@+id/btn_dot"
                style="@style/tv_style_1">

                <TextView
                    android:text="@string/dot"
                    style="@style/tv_style" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_0"
                style="@style/tv_style_1">

                <TextView
                    android:text="@string/_0"
                    style="@style/tv_style"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_answer"
                style="@style/tv_style_1">

                <TextView
                    android:text="@string/equal"
                    style="@style/tv_style"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_plus"
                style="@style/linear_style">

                <TextView
                    android:text="@string/add"
                    style="@style/tv_style"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>